--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,16 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
 
-body {
+* {
+  box-sizing: border-box;
+}
+
+body,
+h1,
+h2,
+h3,
+p,
+ul,
+li {
   font-family: "Roboto";
   margin: 0;
   padding: 0;
@@ -11,11 +21,21 @@ body {
   background-color: #1f2937;
 }
 
-.header {
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 20px;
   display: flex;
   align-items: center;
+  justify-content: space-between;
+  gap: 150px;
 }
 
+.header {
+  padding: 20px 0;
+}
+
+.hero-text,
 .header a {
   font-size: 18px;
   color: #e5e7eb;
@@ -23,18 +43,13 @@ body {
 
 .header ul {
   list-style-type: none;
-  padding: 0;
-  margin: 0;
   display: flex;
   gap: 24px;
-  margin-right: 10vw;
 }
 
 .logo {
   font-size: 24px;
   color: #f9faf8;
-  margin-right: auto;
-  margin-left: 10vw;
   font-weight: 700;
 }
 
@@ -48,6 +63,34 @@ body {
   background-color: #3882f6;
   color: #f9faf8;
   border: none;
-  border-radius: 4px;
+  font-weight: 900;
+  border-radius: 6px;
+  padding: 8px 35px;
   font-size: 18px;
+}
+
+.hero {
+  padding: 80px 0;
+}
+
+.right-hero,
+.left-hero {
+  flex: 1;
+}
+
+.right-hero {
+  background-color: gray;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.right-hero p {
+  color: #f9faf8;
+  font-size: 18px;
+  padding: 100px 0;
+}
+
+.hero-text {
+  margin-bottom: 15px;
 }
