--- a/styles.css
+++ b/styles.css
@@ -94,3 +94,38 @@ li {
 .hero-text {
   margin-bottom: 15px;
 }
+
+.info h1,
+.images {
+  display: flex;
+  justify-content: center;
+  gap: 100px;
+}
+
+.images {
+  margin-bottom: 100px;
+}
+
+.info h1 {
+  font-size: 36px;
+  color: #1f2937;
+  font-weight: 900;
+  margin: 50px 0;
+}
+
+.placeholder {
+  border: 4px solid #3882f6;
+  width: 150px;
+  height: 150px;
+  border-radius: 15px;
+  margin-bottom: 10px;
+}
+
+.image {
+  max-width: 150px;
+}
+
+.image p {
+  color: gray;
+  text-align: center;
+}
