--- a/styles.css
+++ b/styles.css
@@ -189,3 +189,13 @@ li {
   font-size: 18px;
   color: #e5e7eb;
 }
+
+.footer {
+  background-color: #1f2937;
+  font-size: 18px;
+  color: #f9faf8;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 40px 0;
+}
